# babocar-motor-controller-firmware

./: .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  README.md  motor-controller Debug.cfg  motor-controller Debug.launch  motor-controller.cfg  motor-controller.ioc  motor-controller.xml  motor_controller Debug.cfg  motor_controller.cfg  motor_controller.ioc  motor_controller.xml  test_commands.txt
Inc/: common.h  config.h  dc_motor.h  encoder.h  pi_controller.h  stm32f0xx_it.h  tim.h
Src/: adc.c  common.c  dc_motor.c  dma.c  encoder.c  gpio.c  main.c  pi_controller.c  stm32f0xx_it.c  tim.c  usart.c
include/: LateralControl.hpp  LongitudinalControl.hpp  RemoteControllerData.hpp  cfg_board.h  cfg_board.hpp  cfg_car.hpp  cfg_system.hpp  globals.hpp
src/: ControlTask.cpp  DebugTask.cpp  LineCalcTask.cpp  LinePatternCalculator.cpp  RemoteControllerTask.cpp  SensorTask.cpp  VehicleCanTask.cpp  globals.cpp  interrupts.cpp
src/platform/: ControlTask.cpp  DebugTask.cpp  RemoteControllerTask.cpp  interrupts.cpp  system_init.cpp
test/: CMakeLists.txt
test/src/: utest_dummy.cpp
